bundles/pci-dss-v3.2.1/1.1.4_resources-have-required-labels.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pci-dss-v3.2.1-resources-have-required-labels
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/pci-dss-v3.2.1 ',
        bundleVersion: '202208.0',
        bundleDescription: 'Use the PCI-DSS v3.2.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your in cluster resources against the Payment Card Industry Data Security Standard.',
        controlNumbers: '[1.1.4]',
        severity: 'UNASSIGNED',
        description: 'Ensures requirements for a firewall by requiring all apps to contain a specified label.',
        remediation: 'All apps are required to have a valid firewall audit label, please audit the apps's firewall and add a label conforming to the format `pci-dss-firewall-audit: "pci-dss-2022q1"` where the suffix is {Year}q{Quater}.',
        minimumTemplateLibraryVersion: '1.11.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - ReplicaSet
          - Deployment
          - StatefulSet
          - DaemonSet
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
  parameters:
    message: All apps must have a valid pci-dss-firewall-audit label.
    labels:
      - key: pci-dss-firewall-audit
        allowedRegex: ^pci-dss-[0-9]{4}q[1-4]$
