bundles/pci-dss-v3.2.1/1.1.5-2.4_apps-must-have-certain-set-of-annotations.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: pci-dss-v3.2.1-apps-must-have-certain-set-of-annotations
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/pci-dss-v3.2.1 ',
        bundleVersion: '202208.0',
        bundleDescription: 'Use the PCI-DSS v3.2.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your in cluster resources against the Payment Card Industry Data Security Standard.',
        controlNumbers: '[1.1.5,2.4]',
        severity: 'UNASSIGNED',
        description: 'Ensures requirements for network-controls by requiring all apps to contain a specified annotation.',
        remediation: 'All apps are required to have a valid `network-controls/date` annotations, please an annotation conforming to the format `network-controls/date: "YYYY-MM-DD"`.',
        minimumTemplateLibraryVersion: '1.11.1'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - apps
        kinds:
          - ReplicaSet
          - Deployment
          - StatefulSet
          - DaemonSet
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
  parameters:
    message: All apps must have a `network-controls/date` annotations.
    annotations:
      - key: network-controls/date
        # Matches YYYY-MM-DD
        allowedRegex: ^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$
