bundles/pci-dss-v3.2.1/2.1_restrict-default-namespace.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: pci-dss-v3.2.1-restrict-default-namespace
  labels:
    policycontroller.gke.io/bundleName: pci-dss-v3.2.1
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pci-dss-v3.2.1',
        bundleDisplayName: 'PCI DSS v3.2.1',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/pci-dss-v3.2.1 ',
        bundleVersion: '202208.0',
        bundleDescription: 'Use the PCI-DSS v3.2.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your in cluster resources against the Payment Card Industry Data Security Standard.',
        controlNumbers: '[2.1]',
        severity: 'UNASSIGNED',
        description: 'Restricts pods from using the default namespace.',
        remediation: 'The use of the default namespace is restricted, please use a different namespace.  See "Namespaces" for more information: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/',
        minimumTemplateLibraryVersion: '1.10.2'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
  parameters:
    restrictedNamespaces:
    - default
